[gd_scene load_steps=24 format=3 uid="uid://d72lhbaipo1k"]

[ext_resource type="Script" uid="uid://djaf578sknrjd" path="res://Scenes/credit.gd" id="1_m0dbt"]
[ext_resource type="Texture2D" uid="uid://cu07hhxow305k" path="res://Images/phase3.png" id="1_wxpvu"]
[ext_resource type="Theme" path="res://Assets/screen_font.tres" id="2_xpddk"]
[ext_resource type="PackedScene" uid="uid://dr252hvw8htoy" path="res://Scenes/transition.tscn" id="4_7gwq5"]

[sub_resource type="Animation" id="Animation_7gwq5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_m0dbt"]
resource_name = "titreG"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.96666664),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Graphismes:", "Graphismes:"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gwq5"]
_data = {
&"RESET": SubResource("Animation_7gwq5"),
&"titreG": SubResource("Animation_m0dbt")
}

[sub_resource type="Animation" id="Animation_7snrw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_wwm1b"]
resource_name = "nomsG"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.36666667, 0.56666666, 0.76666665, 0.96666664, 1.1333333, 1.3, 1.4666667, 1.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["N", "Ni", "Nin", "Nini", "Nini //", "Nini // M", "Nini // Ma", "Nini // Mat", "Nini // Maté", "Nini // Matéo"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.36666667, 0.56666666, 0.96666664, 1.1333333, 1.3, 1.4666667, 1.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, true, true, true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.36666667, 0.56666666, 0.76666665, 0.96666664, 1.1333333, 1.3, 1.4666667, 1.6333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.11, 0.11, 0.95, 0.95, 1.0, 1.1, 1.0, 0.95, 1.05, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7snrw"]
_data = {
&"RESET": SubResource("Animation_7snrw"),
&"nomsG": SubResource("Animation_wwm1b")
}

[sub_resource type="Animation" id="Animation_8nixa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_5uhh1"]
resource_name = "new_animation"

[sub_resource type="Animation" id="Animation_fnwtp"]
resource_name = "titreP"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Programmation:", "Programmation:"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8nixa"]
_data = {
&"RESET": SubResource("Animation_8nixa"),
&"new_animation": SubResource("Animation_5uhh1"),
&"titreP": SubResource("Animation_fnwtp")
}

[sub_resource type="Animation" id="Animation_sru42"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.11]
}

[sub_resource type="Animation" id="Animation_otqie"]
resource_name = "nomsP"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668, 0.4, 0.53333336, 0.6666667, 0.8, 0.96666664, 1.1333333, 1.3, 1.4666667, 1.6, 1.7333333, 1.8666667, 2, 2.2, 2.4, 2.5333333, 2.6666667, 2.8, 2.9666667, 3.2, 3.3333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["B", "Ba", "Bal", "Balt", "Balth", "Baltha", "Balthaz", "Balthaza", "Balthazar", "Balthazar // ", "Balthazar // E", "Balthazar // El", "Balthazar // Ely", "Balthazar // Elya", "Balthazar // Elyas", "Balthazar // Elyas // ", "Balthazar // Elyas // C", "Balthazar // Elyas // Ca", "Balthazar // Elyas // Cam", "Balthazar // Elyas // Cami", "Balthazar // Elyas // Camil", "Balthazar // Elyas // Camill", "Balthazar // Elyas // Camille"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668, 0.4, 0.53333336, 0.6666667, 0.8, 0.96666664, 1.1333333, 1.4666667, 1.6, 1.7333333, 1.8666667, 2, 2.4, 2.5333333, 2.6666667, 2.8333333, 3, 3.1666667, 3.3666666),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668, 0.4, 0.53333336, 0.6666667, 0.8, 0.96666664, 1.1333333, 1.4666667, 1.6, 1.7333333, 1.8666667, 2, 2.4, 2.5333333, 2.6666667, 2.8333333, 3, 3.1666667, 3.3666666),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.1, 0.9, 1.0, 1.1, 1.0, 1.1, 1.0, 0.9, 1.1, 1.0, 1.1, 0.9, 1.0, 1.1, 1.0, 1.1, 0.9, 1.0, 1.1, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sru42"]
_data = {
&"RESET": SubResource("Animation_sru42"),
&"nomsP": SubResource("Animation_otqie")
}

[sub_resource type="Animation" id="Animation_wv6ro"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}

[sub_resource type="Animation" id="Animation_s5ocw"]
resource_name = "titreM"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["Musique:", "Musique:"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wv6ro"]
_data = {
&"RESET": SubResource("Animation_wv6ro"),
&"titreM": SubResource("Animation_s5ocw")
}

[sub_resource type="Animation" id="Animation_umv24"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [""]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_10mb3"]
resource_name = "nomsM"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.33333334, 0.5, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["E", "El", "Ely", "Elya", "Elyas"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.33333334, 0.5, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.3, 0.5, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.9, 1.0, 1.1, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_umv24"]
_data = {
&"RESET": SubResource("Animation_umv24"),
&"nomsM": SubResource("Animation_10mb3")
}

[node name="Credit" type="Node2D" node_paths=PackedStringArray("transition", "text_titre", "text_noms", "animG", "animGn", "animP", "animPn", "animM", "animMn", "button", "sound")]
script = ExtResource("1_m0dbt")
transition = NodePath("Transition")
text_titre = NodePath("TextureRect/Graphisme")
text_noms = NodePath("TextureRect/nomsG")
code_lines1 = "Graphism"
code_lines2 = "Leni // Matéo"
code_lines3 = "Programmation"
code_lines4 = "Balthazar // Elyas // Camille"
code_lines5 = "Music"
code_lines6 = "Elyas"
animG = NodePath("TextureRect/Graphisme/anim\' titre")
animGn = NodePath("TextureRect/nomsG/anim nom")
animP = NodePath("TextureRect/Prog/anim\' titre")
animPn = NodePath("TextureRect/nomsP/anim nom")
animM = NodePath("TextureRect/Musique/anim\' titre")
animMn = NodePath("TextureRect/nomsM/anim nom")
button = NodePath("Button")
sound = NodePath("AudioStreamPlayer")

[node name="Phase3" type="Sprite2D" parent="."]
position = Vector2(575.4444, 325.25)
scale = Vector2(0.59953696, 0.59953696)
texture = ExtResource("1_wxpvu")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Graphisme" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 365.0
offset_top = 115.0
offset_right = 552.0
offset_bottom = 168.0
theme = ExtResource("2_xpddk")
theme_override_colors/default_color = Color(0.16862746, 0, 0.23921569, 1)
theme_override_colors/font_outline_color = Color(0.91764706, 0.5647059, 0.5176471, 1)
theme_override_font_sizes/normal_font_size = 20

[node name="anim\' titre" type="AnimationPlayer" parent="TextureRect/Graphisme"]
libraries = {
&"": SubResource("AnimationLibrary_7gwq5")
}

[node name="nomsG" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 427.0
offset_top = 143.0
offset_right = 615.0
offset_bottom = 188.0
theme = ExtResource("2_xpddk")
theme_override_font_sizes/normal_font_size = 18

[node name="anim nom" type="AnimationPlayer" parent="TextureRect/nomsG"]
libraries = {
&"": SubResource("AnimationLibrary_7snrw")
}

[node name="Prog" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 367.0
offset_top = 184.0
offset_right = 561.0
offset_bottom = 221.0
theme = ExtResource("2_xpddk")
theme_override_colors/default_color = Color(0.16862746, 0, 0.23921569, 1)
theme_override_colors/font_outline_color = Color(0.91764706, 0.5647059, 0.5176471, 1)
theme_override_font_sizes/normal_font_size = 20

[node name="anim\' titre" type="AnimationPlayer" parent="TextureRect/Prog"]
libraries = {
&"": SubResource("AnimationLibrary_8nixa")
}

[node name="nomsP" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 429.0
offset_top = 216.0
offset_right = 754.0
offset_bottom = 245.0
theme = ExtResource("2_xpddk")
theme_override_font_sizes/normal_font_size = 18

[node name="anim nom" type="AnimationPlayer" parent="TextureRect/nomsP"]
libraries = {
&"": SubResource("AnimationLibrary_sru42")
}

[node name="Musique" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 366.0
offset_top = 252.0
offset_right = 477.0
offset_bottom = 289.0
theme = ExtResource("2_xpddk")
theme_override_colors/default_color = Color(0.16862746, 0, 0.23921569, 1)
theme_override_colors/font_outline_color = Color(0.91764706, 0.5647059, 0.5176471, 1)
theme_override_font_sizes/normal_font_size = 20

[node name="anim\' titre" type="AnimationPlayer" parent="TextureRect/Musique"]
libraries = {
&"": SubResource("AnimationLibrary_wv6ro")
}

[node name="nomsM" type="RichTextLabel" parent="TextureRect"]
layout_mode = 0
offset_left = 429.0
offset_top = 284.0
offset_right = 498.0
offset_bottom = 311.0
theme = ExtResource("2_xpddk")
theme_override_font_sizes/normal_font_size = 18

[node name="anim nom" type="AnimationPlayer" parent="TextureRect/nomsM"]
libraries = {
&"": SubResource("AnimationLibrary_umv24")
}

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 745.0
offset_top = 277.0
offset_right = 865.0
offset_bottom = 337.0
theme = ExtResource("2_xpddk")
theme_override_font_sizes/font_size = 25
text = "Leave"

[node name="Transition" parent="." instance=ExtResource("4_7gwq5")]
visible = false
offset_left = 3.0
offset_top = 1.0
offset_right = 1154.0
offset_bottom = 652.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
